fix: align navbar icons

--- a/src/extension/features/general/nav-display-density/compact.css
+++ b/src/extension/features/general/nav-display-density/compact.css
@@ -6,10 +6,6 @@
   height: 2.2rem !important;
 }
 
-.nav-main svg {
-  margin-left: 15px !important;
-}
-
 .tk-navlink i {
   padding-left: 15px !important;
   margin-right: 15px !important;
