--- a/src/extension/features/general/nav-display-density/slim.css
+++ b/src/extension/features/general/nav-display-density/slim.css
@@ -12,10 +12,6 @@
   border-radius: 0 !important;
 }
 
-.nav-main svg {
-  margin-left: 15px !important;
-}
-
 .tk-navlink i {
   padding-left: 15px !important;
   margin-right: 15px !important;
